--- a/odoo/vars/Debian_10-Odoo_14.0.yml
+++ b/odoo/vars/Debian_10-Odoo_14.0.yml
@@ -74,4 +74,4 @@ odoo_wkhtmltox_depends:
     - xz-utils
 
 odoo_nodejs_source: "https://deb.nodesource.com/setup_17.x"
-odoo_wkhtmltox_url: "{{ ansible_architecture == 'aarch64' and 'https://launchpad.net/ubuntu/+source/wkhtmltopdf/0.12.5-1/+build/16393811/+files/wkhtmltopdf_0.12.5-1_arm64.deb' or 'https://github.com/wkhtmltopdf/wkhtmltopdf/releases/download/0.12.5/wkhtmltox_0.12.5-1.buster_%s.deb' % ('64' in ansible_architecture and 'amd64' or 'i386') }}"
+odoo_wkhtmltox_url: "{{ 'https://github.com/wkhtmltopdf/packaging/releases/download/0.12.6-1/wkhtmltox_0.12.6-1.buster_%s.deb' % ((ansible_architecture == 'aarch64' and 'arm64') or ('64' in ansible_architecture and 'amd64') or 'i386') }}"
