[IMP] Accept attachments until 25Mo

--- a/odoo/templates/nginx.conf
+++ b/odoo/templates/nginx.conf
@@ -27,6 +27,7 @@ server {
             return 503;
         }
         proxy_pass http://odoo;
+        client_max_body_size 25M;
     }
 
     location ~* /web/static/ {
