[IMP] Disallow robots.txt

--- a/odoo/templates/nginx.conf
+++ b/odoo/templates/nginx.conf
@@ -45,6 +45,10 @@ server {
         return 200;
     }
 
+    location /robots.txt {
+        return 200 "User-agent: *\nDisallow: /";
+    }
+
     error_page 503 @maintenance;
     location @maintenance {
         rewrite ^(.*)$ /maintenance.html break;
