--- a/odoo/tasks/configure_nginx.yml
+++ b/odoo/tasks/configure_nginx.yml
@@ -24,6 +24,7 @@
   template:
     src: nginx.conf
     dest: /etc/nginx/sites-available/default
+  notify: Restart Nginx
 
 - name: Enable new site
   file:
