--- a/odoo/templates/nginx.conf
+++ b/odoo/templates/nginx.conf
@@ -6,7 +6,7 @@ upstream odoo-chat {
     server 127.0.0.1:8072 weight=1;
 }
 
-log_format timed_combined '$remote_addr - $remote_user [$time_local] '
+log_format timed_combined '$http_x_forwarded_for - $remote_user [$time_local] '
                           '"$request" $status $body_bytes_sent '
                           '"$http_referer" "$http_user_agent" '
                           '$request_time';
