[IMP] Allow to configure nginx timeout and max body size

--- a/odoo/defaults/main.yml
+++ b/odoo/defaults/main.yml
@@ -108,6 +108,8 @@ odoo_logfile: "{{ odoo_logdir }}/server.log"
 odoo_maintenance_team: "Odoo IT team"
 odoo_nginx_document_root: "/var/www/html/"
 odoo_nginx_server_name: "_"
+odoo_nginx_timeout: 720s
+odoo_nginx_client_max_body_size: 25M
 
 # Tasks related to PostgreSQL
 odoo_postgresql_set_user: True
