--- a/odoo/templates/nginx.conf
+++ b/odoo/templates/nginx.conf
@@ -27,7 +27,11 @@ server {
             return 503;
         }
         proxy_pass http://odoo;
-        client_max_body_size 25M;
+        proxy_connect_timeout {{ odoo_nginx_timeout }};
+        proxy_read_timeout {{ odoo_nginx_timeout }};
+        proxy_send_timeout {{ odoo_nginx_timeout }};
+        send_timeout {{ odoo_nginx_timeout }};
+        client_max_body_size  {{ odoo_nginx_client_max_body_size }};
     }
 
     location ~* /web/static/ {
