[IMP] Allow to manage database update from a release file (required by CodeDeploy)

--- a/odoo/defaults/main.yml
+++ b/odoo/defaults/main.yml
@@ -26,7 +26,6 @@ odoo_repo_update: yes   # Update the working copy or not. This option is
 odoo_repo_depth: 1      # Set to 0 to clone the full history (slower)
                         # (this option is supported only with git)
 odoo_repo_single_branch: yes
-odoo_repo_revision_file: "{{ odoo_rootdir }}/.gitrevision"
 
 # Odoo configuration file
 odoo_config_file: "/etc/{{ odoo_service }}/server.conf"
@@ -124,6 +123,8 @@ odoo_update_database_backup: "/tmp/{{ odoo_config_db_name }}-{{ ansible_date_tim
 odoo_update_lockdir: "{{ odoo_config_data_dir }}/.lock"
 odoo_update_logfile: "{{ odoo_logrotate and odoo_logfile or odoo_config_logfile }}"
 odoo_update_modules: all
+odoo_update_release_file: "{{ odoo_rootdir }}/release.yml"
+odoo_update_version:  
 odoo_update_wait_delay: 0
 odoo_update_wait_sleep: 5
 odoo_update_wait_timeout: 900
