--- a/odoo/templates/nginx.conf
+++ b/odoo/templates/nginx.conf
@@ -16,12 +16,18 @@ server {
     server_name {{ odoo_nginx_server_name }};
     root {{ odoo_nginx_document_root }};
 
+    # Configure proxy logs
     access_log /var/log/nginx/odoo.access.log timed_combined;
     error_log /var/log/nginx/odoo.error.log;
 
-    proxy_set_header Host $host;
+    # Add headers for odoo proxy mode
+    proxy_set_header HTTPS "on";
+    proxy_set_header X-Forwarded-Host $host;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto https;
+    proxy_set_header X-Real-IP $remote_addr;
 
+    # Redirect requests to odoo backend server
     location / {
         if (-f $document_root/maintenance.on) {
             return 503;
@@ -34,6 +40,7 @@ server {
         client_max_body_size  {{ odoo_nginx_client_max_body_size }};
     }
 
+    # Cache static assets
     location ~* /web/static/ {
         proxy_cache_valid 200 60m;
         proxy_buffering on;
@@ -41,23 +48,28 @@ server {
         proxy_pass http://odoo;
    }
 
+    # Redirect longpoll requests to odoo longpolling port
     location /longpolling {
         proxy_pass http://odoo-chat;
     }
 
+    # Provide a path for the load balancer health check probe
     location /health_check {
         return 200;
     }
 
+    # Ask to web crawlers not to index the odoo pages
     location /robots.txt {
         return 200 "User-agent: *\nDisallow: /";
     }
 
+    # Maintenance page
     error_page 503 @maintenance;
     location @maintenance {
         rewrite ^(.*)$ /maintenance.html break;
     }
 
+    # Compress server responses
     gzip on;
     gzip_disable "MSIE [1-6]\.(?!.*SV1)";
     gzip_vary on;
