--- a/odoo/defaults/main.yml
+++ b/odoo/defaults/main.yml
@@ -111,6 +111,7 @@ odoo_nginx_timeout: 720s
 odoo_nginx_client_max_body_size: 25M
 
 # Tasks related to PostgreSQL
+odoo_postgresql_version: 13
 odoo_postgresql_set_user: True
 odoo_postgresql_user_role_attr: CREATEDB,NOSUPERUSER
 odoo_postgresql_active_unaccent: True
