--- a/odoo/templates/odoo.conf
+++ b/odoo/templates/odoo.conf
@@ -35,6 +35,8 @@ log_level = {{ odoo_config_log_level }}
 logfile = {{ not odoo_logrotate and odoo_config_logfile }}
 longpolling_port = {{ odoo_config_longpolling_port }}
 max_cron_threads = {{ odoo_config_max_cron_threads }}
+new_relic_config_file = {{ odoo_newrelic_config_file }}
+new_relic_environment = {{ odoo_newrelic_environment }}
 osv_memory_age_limit = {{ odoo_config_osv_memory_age_limit }}
 osv_memory_count_limit = {{ odoo_config_osv_memory_count_limit }}
 pg_path = {{ odoo_config_pg_path }}
