--- a/odoo/defaults/main.yml
+++ b/odoo/defaults/main.yml
@@ -103,6 +103,16 @@ odoo_logrotate: True
 odoo_logdir: "/var/log/{{ odoo_service }}"
 odoo_logfile: "{{ odoo_logdir }}/server.log"
 
+# NewRelic configuration
+odoo_newrelic_account_id:  
+odoo_newrelic_api_key:  
+odoo_newrelic_app_name: Odoo
+odoo_newrelic_config_file: "{{ odoo_config_file | dirname }}/newrelic.ini"
+odoo_newrelic_environment: production
+odoo_newrelic_license_key:  
+odoo_newrelic_log_file: "/var/log/newrelic/python-agent.log"
+odoo_newrelic_region: EU
+
 # Nginx configuration
 odoo_maintenance_team: "Odoo IT team"
 odoo_nginx_document_root: "/var/www/html/"
@@ -146,6 +156,7 @@ odoo_clone_src_data_dir:
 odoo_install_packages: True
 odoo_set_configuration: True
 odoo_set_logrotate: True
+odoo_set_newrelic: False
 odoo_set_nginx: True
 odoo_set_postgresql: True
 odoo_set_service: True
