[IMP] In maintenance mode, return a json response for any json-rpc call

--- a/odoo/tasks/configure_nginx.yml
+++ b/odoo/tasks/configure_nginx.yml
@@ -17,8 +17,11 @@
 
 - name: Setup maintenance page
   template:
-    src: maintenance.html
+    src: "{{ item }}"
     dest: "{{ odoo_nginx_document_root }}"
+  loop:
+    - maintenance.html
+    - maintenance.json
 
 - name: Setup site configuration file
   template:
