--- a/odoo/templates/nginx.conf
+++ b/odoo/templates/nginx.conf
@@ -55,7 +55,10 @@ server {
 
     # Provide a path for the load balancer health check probe
     location /health_check {
-        return 200;
+        if (-f $document_root/maintenance.on) {
+            return 200;
+        }
+        rewrite ^/health_check /web/login last;
     }
 
     # Ask to web crawlers not to index the odoo pages
@@ -66,6 +69,7 @@ server {
     # Maintenance page
     error_page 503 @maintenance;
     location @maintenance {
+        rewrite ^/jsonrpc(.*)$ /maintenance.json break;
         rewrite ^(.*)$ /maintenance.html break;
     }
 
