[IMP] Avoid returning a 3xx code when calling Odoo backend

--- a/odoo/templates/nginx.conf
+++ b/odoo/templates/nginx.conf
@@ -37,6 +37,7 @@ server {
         if (-f $document_root/maintenance.on) {
             return 503;
         }
+        proxy_redirect off;
         proxy_pass http://odoo;
         client_max_body_size  {{ odoo_nginx_client_max_body_size }};
     }
