[IMP] Redirect health check probe to Odoo  except in maintenance mode

--- a/odoo/templates/nginx.conf
+++ b/odoo/templates/nginx.conf
@@ -47,6 +47,7 @@ server {
         proxy_cache_valid 200 60m;
         proxy_buffering on;
         expires 864000;
+        proxy_redirect off;
         proxy_pass http://odoo;
    }
 
@@ -60,7 +61,8 @@ server {
         if (-f $document_root/maintenance.on) {
             return 200;
         }
-        rewrite ^/health_check /web/login last;
+        proxy_redirect off;
+        proxy_pass http://odoo;
     }
 
     # Ask to web crawlers not to index the odoo pages
