--- a/odoo/handlers/main.yml
+++ b/odoo/handlers/main.yml
@@ -14,3 +14,9 @@
     name: nginx
     state: restarted
   become: yes
+
+- name: Restart fail2ban
+  service:
+    name: fail2ban
+    state: restarted
+  become: yes
