--- a/odoo/templates/nginx.conf
+++ b/odoo/templates/nginx.conf
@@ -20,6 +20,15 @@ server {
     access_log /var/log/nginx/odoo.access.log timed_combined;
     error_log /var/log/nginx/odoo.error.log;
 
+    # Configure proxy to display the client ip address
+    {% if odoo_nginx_trusted_ips is defined %}
+    {% for trusted_ip in odoo_nginx_trusted_ips %}
+    set_real_ip_from {{ trusted_ip }};
+    {% endfor %}
+    real_ip_header X-Forwarded-For;
+    real_ip_recursive on;
+    {% endif %}
+
     # Add headers for odoo proxy mode
     proxy_set_header HTTPS "on";
     proxy_set_header X-Forwarded-Host $host;
