--- a/odoo/templates/nginx.conf
+++ b/odoo/templates/nginx.conf
@@ -11,6 +11,12 @@ log_format timed_combined '$http_x_forwarded_for - $remote_user [$time_local] '
                           '"$http_referer" "$http_user_agent" '
                           '$request_time';
 
+proxy_cache_path {{ odoo_nginx_cache_folder }}
+                 levels=1:2
+                 keys_zone=odoo:10m
+                 inactive=60m
+                 max_size=20g;
+
 server {
     listen 80;
     server_name {{ odoo_nginx_server_name }};
@@ -21,8 +27,8 @@ server {
     error_log /var/log/nginx/odoo.error.log;
 
     # Configure proxy to display the client ip address
-    {% if odoo_nginx_trusted_ips is defined %}
-    {% for trusted_ip in odoo_nginx_trusted_ips %}
+    {% if odoo_nginx_trusted_ips is defined and odoo_nginx_trusted_ips|bool %}
+    {% for trusted_ip in odoo_nginx_trusted_ips|list %}
     set_real_ip_from {{ trusted_ip }};
     {% endfor %}
     real_ip_header X-Forwarded-For;
@@ -51,14 +57,36 @@ server {
         client_max_body_size  {{ odoo_nginx_client_max_body_size }};
     }
 
-    # Cache static assets
-    location ~* /web/static/ {
-        proxy_cache_valid 200 60m;
+    # Cache configuration
+    location ~* /[^/]+/static/ {
+        try_files =404 @cache;
+    }
+    location ~* ^/web/content/.+\.(js|css)$ {
+        try_files =404 @cache;
+    }
+    location ~* ^/web/image/product.image/ {
+        try_files =404 @cache;
+    }
+    location @cache {
+        proxy_cache odoo;
+        proxy_cache_valid 60m;
+        proxy_cache_valid any 1m;
+        proxy_cache_revalidate on;
+        proxy_cache_use_stale error timeout updating;
+        proxy_cache_background_update on;
+        proxy_cache_lock on;
         proxy_buffering on;
-        expires 864000;
+
+        proxy_hide_header Set-Cookie;
+        proxy_ignore_headers Set-Cookie;
+        proxy_set_header Cookie "";
+        proxy_cache_bypass $http_cache_control;
+        add_header X-Cache-Status $upstream_cache_status;
+
+        expires 10d;
         proxy_redirect off;
         proxy_pass http://odoo;
-   }
+    }
 
     # Redirect longpoll requests to odoo longpolling port
     location /longpolling {
@@ -93,5 +121,12 @@ server {
     gzip_comp_level 6;
     gzip_buffers 16 8k;
     gzip_http_version 1.1;
-    gzip_types text/css text/less text/scss text/plain text/xml application/xml application/json application/javascript;
+    gzip_types text/css
+               text/less
+               text/scss
+               text/plain
+               text/xml
+               application/xml
+               application/json
+               application/javascript;
 }
