--- a/odoo/defaults/main.yml
+++ b/odoo/defaults/main.yml
@@ -132,7 +132,7 @@ odoo_postgresql_login_password: "{{ odoo_config_db_password }}"
 
 # Tasks related to database update
 odoo_update_datadir_backup: "{{ odoo_config_data_dir }}/../backup"
-odoo_update_database_backup: "/tmp/{{ odoo_config_db_name }}-{{ ansible_date_time.date }}.sql"
+odoo_update_database_backup: "/tmp/{{ odoo_config_db_name }}-{{ ansible_date_time.iso8601_basic_short }}.sql"
 odoo_update_lockdir: "{{ odoo_config_data_dir }}/.lock"
 odoo_update_logfile: "{{ odoo_logrotate and odoo_logfile or odoo_config_logfile }}"
 odoo_update_modules: all
@@ -150,7 +150,7 @@ odoo_clone_src_db_sslmode: prefer
 odoo_clone_src_db_user:  
 odoo_clone_src_db_password:  
 odoo_clone_src_db_name:  
-odoo_clone_src_db_backup: "/tmp/{{ odoo_clone_src_db_name }}-{{ ansible_date_time.date }}.sql"
+odoo_clone_src_db_backup: "/tmp/{{ odoo_clone_src_db_name }}-{{ ansible_date_time.iso8601_basic_short }}.sql"
 odoo_clone_src_data_dir:  
 
 # In addition to tags
